# thunder_book_rust

./: README.md
03_OnePlayerGame/: Cargo.toml
03_OnePlayerGame/src/: 00_MazeState.rs  01_Greedy.rs  04_BeamSearch.rs  06_ChokudaiSearch.rs
04_HeuristicGame/: Cargo.toml
04_HeuristicGame/src/: 00_AutoMoveMazeState.rs  01_HillClimb.rs  02_SimulatedAnnealing.rs
05_AlternateGame/: Cargo.toml
05_AlternateGame/src/: 00_AlternateMazeState.rs  01_MiniMax.rs  02_TestWinrate.rs  03_AlphaBeta.rs  05_IterativeDeepening.rs  06_PrimitiveMontecarlo.rs  08_MCTS.rs  12_ThunderSearch.rs
06_SimultaneousGame/: Cargo.toml
06_SimultaneousGame/src/: 00_SimultaneousMazeState.rs  01_PrimitiveMontecarlo.rs  02_MCTSSimulation.rs  03_DUCT.rs
07_Advanced/: Cargo.toml
07_Advanced/src/: 00_WallMazeState.rs  01_GameScore.rs  02_DistanceScore.rs  03_ZobristHash.rs  04_TestSpeed.rs
