[package]
name = "OnePlayerGame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"

[[bin]]
name = "00_MazeState"
path = "src/00_MazeState.rs"

[[bin]]
name = "01_Greedy"
path = "src/01_Greedy.rs"

[[bin]]
name = "04_BeamSearch"
path = "src/04_BeamSearch.rs"
