[package]
name = "HeauristicGame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"

[[bin]]
name = "00_AlternateMazeState"
path = "src/00_AlternateMazeState.rs"

[[bin]]
name = "01_MiniMax"
path = "src/01_MiniMax.rs"

[[bin]]
name = "02_TestWinrate"
path = "src/02_TestWinrate.rs"

[[bin]]
name = "03_AlphaBeta"
path = "src/03_AlphaBeta.rs"

[[bin]]
name = "05_IterativeDeepening"
path = "src/05_IterativeDeepening.rs"

[[bin]]
name = "06_PrimitiveMontecarlo"
path = "src/06_PrimitiveMontecarlo.rs"

[[bin]]
name = "08_MCTS"
path = "src/08_MCTS.rs"
