[package]
name = "SimultaneousGame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"

[[bin]]
name = "00_SimultaneousMazeState"
path = "src/00_SimultaneousMazeState.rs"

[[bin]]
name = "01_PrimitiveMontecarlo"
path = "src/01_PrimitiveMontecarlo.rs"

[[bin]]
name = "02_MCTSSimulation"
path = "src/02_MCTSSimulation.rs"

[[bin]]
name = "03_DUCT"
path = "src/03_DUCT.rs"
