[package]
name = "Advanced"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"

[[bin]]
name = "00_WallMazeState"
path = "src/00_WallMazeState.rs"

[[bin]]
name = "01_GameScore"
path = "src/01_GameScore.rs"

[[bin]]
name = "02_DistanceScore"
path = "src/02_DistanceScore.rs"
